# plex-anime-replacer

./: .gitignore  .pylintrc  bandit.config.yml  config.yaml.sample  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
replacer/: __main__.py
replacer/filesystem/: __init__.py  anime.py  movement.py
replacer/settings/: __init__.py  config.py
tests/: consts.py  generators.py
tests/unit/filesystem/: __init__.py  fixtures.py  test_anime.py  test_movement.py
